Tweak docs visuals

--- a/apps/docs/pages/index.mdx
+++ b/apps/docs/pages/index.mdx
@@ -1,14 +1,14 @@
-import { Cards } from 'nextra/components'
+import { Cards, Callout } from "nextra/components";
 
 ---
-title: "Introduction"
----
 
-*Gardens is a bottom-up governance framework for web3 ecosystems. We provide coordination infrastructure and funding mechanisms that help grow networks of public goods, run by the individuals and communities that understand them best. *
+## Introduction
+
+_Gardens is a bottom-up governance framework for web3 ecosystems. We provide coordination infrastructure and funding mechanisms that help grow networks of public goods, run by the individuals and communities that understand them best._
 
 Our emphasis is on a community experience that’s healthy, fun, intuitive, secure, and open.
 
-All of our code is open-source. Always has been and always will be.  🌱
+All of our code is open-source. Always has been and always will be. 🌱
 
 ## Our Mission
 
@@ -25,10 +25,14 @@ Our approach at Gardens is to give organizations streamlined access to cutting e
 ## Jump right in
 
 <Cards>
-  <Cards.Card title="**Ecosystems**" href="/coordination-hierarchy/editor" />
-  <Cards.Card title="**Communities**" href="/coordination-hierarchy/markdown" />
-  <Cards.Card title="**Pools**" href="/coordination-hierarchy/images-and-media" />
+  <Cards.Card title="Ecosystems" href="/coordination-hierarchy/editor" />
+  <Cards.Card title="Communities" href="/coordination-hierarchy/markdown" />
+  <Cards.Card title="Pools" href="/coordination-hierarchy/images-and-media" />
 </Cards>
 
-> [!info]
-> **Work in Progress. **Our documentation is a rapidly improving work in progress. If you have questions or feel like something is missing, feel free to ask on [Discord](https://discord.com/invite/C4jhEYkqTv) where we (and our wonderful community) are actively responding
+<Callout>
+  Work in Progress. Our documentation is a rapidly improving work in progress.
+  If you have questions or feel like something is missing, feel free to ask on
+  [Discord](https://discord.com/invite/C4jhEYkqTv) where we (and our wonderful
+  community) are actively responding
+</Callout>
