--- a/apps/docs/pages/start-here/activate-governance.mdx
+++ b/apps/docs/pages/start-here/activate-governance.mdx
@@ -1,8 +1,13 @@
+import { Callout } from "nextra/components";
+
 ---
-title: "Activate Governance"
----
+
+## Activate Governance
 
 Activating or Deactivating Governance enables community members to turn governance features on or off for each pool, affecting their ability to support proposals.
 
-> [!danger]
-> Please be cautious when deactivating your governance. If you've allocated or supported proposals, deactivating will remove all your support from those proposals.
+<Callout type="warning">
+  Please be cautious when deactivating your governance. If you've allocated or
+  supported proposals, deactivating will remove all your support from those
+  proposals.
+</Callout>
