--- a/apps/docs/pages/the-covenant/quickstart.mdx
+++ b/apps/docs/pages/the-covenant/quickstart.mdx
@@ -3,6 +3,8 @@ title: "Covenant: A first look"
 description: "To encode values"
 ---
 
+import { Callout } from "nextra/components";
+
 The keystone of Gardens v2 infrastructure is the Community Covenant, which serves to:
 
 1. Encode a community’s values / mission in an onchain social contract
@@ -11,5 +13,8 @@ The keystone of Gardens v2 infrastructure is the Community Covenant, which serve
 
 The Covenant is the North Star for Gardens communities, guiding members towards a shared vision that they collectively create.
 
-> [!info]
-> Want to learn about writing a good covenant from scratch? Head to the [writing](/the-covenant/publish-your-docs) a good covenant section to learn more.
+<Callout>
+  Want to learn about writing a good covenant from scratch? Head to the
+  [writing](/the-covenant/publish-your-docs) a good covenant section to learn
+  more.
+</Callout>
